1.7.0
	* Changed the behaviour of ldns_resolver.trusted_key() in order to prevent
	  memory corrupotion and leaks.
	* Fixed memory leaks when destroying ldns_resolver.
	* Removed ldns_pkt.section_count(), ldns_resolver.set_searchlist_count()
	  because it is marked static in the library.
	* Added ldns_pkt.new(), ldns_resolver.new().
	* Marked as returning new object ldns_pkt.get_section_clone(),
	  ldns_resolver.get_addr_by_name(), ldns_resolver.get_name_by_addr(),
	  ldns_resolver.search().
	* Added push cloning for ldns_pkt.safe_push_rr(),
	  ldns_pkt.safe_push_rr_list(), ldns_pkt.set_additional(),
	  ldns_pkt.set_answer(), ldns_pkt.set_answerfrom(),
	  ldns_pkt.set_authority(), ldns_pkt.set_edns_data(),
	  ldns_pkt.set_question(), ldns_pkt.set_tsig(),
	  ldns_resolver.set_dnssec_anchors(), ldns_resolver.set_domain().
	* Added pull cloning for ldns_pkt.answerfrom(), ldns_pkt.edns_data(),
	  ldns_pkt.tsig(), ldns_resolver.axfr_last_pkt(),
	  ldns_resolver.dnssec_anchors(), ldns_resolver.domain(),
	  ldns_resolver.tsig_algorithm(), ldns_resolver.tsig_keydata(),
	  ldns_resolver.tsig_keyname().
	* Method ldns_rdf.reverse() now throws an exception when not applied
	  on dname rdfs. This is to prevent assertion fails in ldns' C code.

1.6.16
	* Fix typo in ldns_struct_pkt.opcode2str

1.6.14	2012-10-23
	* Added rich comparison methods for ldns_dname, ldns_rdf, ldns_rr and
	  ldns_rr_list classes.
	* Added deprecation warnings into ldns_rr.new_frm_fp() and
	  ldns_rr.new_frm_fp_l() and others.
	* Fixed ldns_rr.set_rdf(), which may cause memory leaks, because it
	  returns new objects (in the scope of Python). Also it leaked memory,
	  when the call was not successful.
	* Fixed ldns_get_rr_list_hosts_frm_file, marked as newobject.
	* Fixed ldns_rr_list.cat() to return bool as mentioned in documentation.
	* Fixed ldns_rr_list_cat_clone, marked as newobject.
	* Fixed ldns_rr_list.new_frm_file(). Exception argument was invalid.